fixed groups grid responsiveness and an issue with page height on small screens

--- a/client/src/css/groups.css
+++ b/client/src/css/groups.css
@@ -229,6 +229,16 @@
 
 @media(max-width: 900px){
 
+    .groups{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        height: fit-content;
+        gap: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+
     .groupsHome{
         display: flex;
         width: 100%;
@@ -247,6 +257,29 @@
 }
 
 @media(max-width: 390px){
+
+    .home{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .groupsHome{
+        display: flex;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .groups{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        height: fit-content;
+        gap: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+
     .groupsBox-header h1{
         font-size: 24px;
     }
